--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">AzureToolkit Sample</a>
+            <a class='navbar-brand' [routerLink]="['/home']">AzureToolkit</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
